finiteelementmapdir = $(includedir)/dune/pdelab/finiteelementmap

finiteelementmap_HEADERS =			\
	bdm1cube2dfem.hh			\
	bdm1simplex2dfem.hh			\
	brezzidouglasmarinifem.hh		\
	conformingconstraints.hh		\
	edges0.5fem.hh				\
	finiteelementmap.hh			\
	global.hh				\
	hangingnodeconstraints.hh		\
	hangingnodemanager.hh			\
	l2orthonormal.hh			\
	mfdconstraints.hh			\
	mimeticfem.hh				\
	monomfem.hh				\
	opbfem.hh				\
	p0constraints.hh			\
	p0ghostconstraints.hh			\
	p0fem.hh				\
	p12dfem.hh				\
	p1fem.hh				\
	pk1dbasis.hh				\
	pk2dfem.hh				\
	pk3dfem.hh				\
	pkfem.hh				\
	powerfem.hh				\
	q12dfem.hh				\
	q1fem.hh				\
	q22dfem.hh				\
	qkdg.hh					\
	rannacher_turek2dfem.hh			\
	raviartthomasfem.hh			\
	rt0constraints.hh			\
	rt0cube2dfem.hh				\
	rt0cube3dfem.hh				\
	rt0simplex2dfem.hh			\
	rt1cube2dfem.hh				\
	rt1cube3dfem.hh				\
	rt1simplex2dfem.hh			\
	rt2cube2dfem.hh				\
	variablemonomfem.hh

include $(top_srcdir)/am/global-rules
