myincdir = $(includedir)/dune/pdelab/function

myinc_HEADERS =					\
	callableadapter.hh			\
	const.hh				\
	division.hh				\
	inverse.hh				\
	memberadaptor.hh			\
	minus.hh				\
	product.hh				\
	scalarscaled.hh				\
	selectcomponent.hh			\
	sqr.hh					\
	sqrt.hh

include $(top_srcdir)/am/global-rules


EXTRA_DIST = CMakeLists.txt
